# LeetCode-Solutions

./: .gitignore  1. Two Sum.cpp  100. Same Tree.cpp  1137. N-th Tribonacci Number.cpp  1171. Remove Zero Sum Consecutive Nodes from Linked List.cpp  1249. Minimum Remove to Make Valid Parentheses.cpp  129. Sum Root to Leaf Numbers.cpp  131. Palindrome Partitioning.cpp  142_Linked_List_Cycle_II.cpp  143. Reorder List.cpp  1481. Least Number of Unique Integers after K Removals.cpp  15. 3Sum.cpp  1544. Make The String Great.cpp  1608. Special Array With X Elements Greater Than or Equal X.cpp  165. Compare Version Numbers.cpp  1669. Merge In Between Linked Lists.cpp  169. Majority Element.cpp  1700. Number of Students Unable to Eat Lunch.cpp  172. Factorial Trailing Zeroes.cpp  1750_Minimum_Length_of_String_After_Deleting_Similar_Ends.cpp  1971. Find if Path Exists in Graph.cpp  1992. Find All Groups of Farmland.cpp  200. Number of Islands.cpp  2000. Reverse Prefix of Word.cpp  202. Happy_Number.cpp  205. Isomorphic Strings.cpp  206-Reverse-Linked-List.cpp  206_Reverse_Linked_List.cpp  2073. Time Needed to Buy Tickets.cpp  2095_Delete_the_Middle_Node_of_a_Linked_List.cpp  2130. Maximum_Twin_Sum_of_a_Linked_List.cpp  2331. Evaluate Boolean Binary Tree.cpp  234. Palindrome Linked List.cpp  237. Delete Node in a Linked List.cpp  2373. Largest Local Values in a Matrix.cpp  2441. Largest Positive Integer That Exists With Its Negative.cpp  2540. Minimum Common Value.cpp  2545. Sort the Students by Their Kth Score.cpp  2597. The Number of Beautiful Subsets.cpp  2798. Number of Employees Who Met the Target.cpp  (+45 more)
1 -- 9/: 2. Add Two Numbers.cpp
1 -- 99/: 19. Remove Nth Node From End of List.cpp  3. Longest Substring Without Repeating Characters.cpp  4. Median of Two Sorted Arrays.cpp  42. Trapping Rain Water.cpp  85. Maximal Rectangle.cpp  92. Reverse Linked List II.cpp
10 -- 99/: 15. 3Sum.cpp  41. First Missing Positive.cpp  57. Insert Interval.cpp  75. Sort Colors.cpp  79. Word Search.cpp
100 -- 999/: 136. Single Number.cpp  140. Word Break II.cpp  141. Linked List Cycle.cpp  201. Bitwise AND of Numbers Range.cpp  206. Reverse Linked List.cpp  213. House Robber II.cpp  231. Power of Two.cpp  234. Palindrome Linked List.cpp  238. Product of Array Except Self.cpp  260. Single Number III.cpp  263. Ugly Number.cpp  268. Missing Number.cpp  330. Patching Array.cpp  344. Reverse String.cpp  349. Intersection of Two Arrays.cpp  350. Intersection of Two Arrays II.cpp  404. Sum of Left Leaves.cpp  409. Longest Palindrome.cpp  463. Island Perimeter.cpp  502. IPO.cpp  506. Relative Ranks.cpp  513. Find Bottom Left Tree Value.cpp  523. Continuous Subarray Sum.cpp  525. Contiguous Array.cpp  621. Task Scheduler.cpp  623. Add One Row to Tree.cpp  633. Sum of Square Numbers.cpp  648. Replace Words.cpp  726. Number of Atoms.cpp  752. Open the Lock.cpp  791. Custom Sort String.cpp  826. Most Profit Assigning Work.cpp  834. Sum of Distances in Tree.cpp  846. Hand of Straights.cpp  857. Minimum Cost to Hire K Workers.cpp  912. Sort an Array.cpp  945. Minimum Increment to Make Array Unique.cpp  974. Subarray Sums Divisible by K.cpp  977. Squares of a Sorted Array.cpp  988. Smallest String Starting From Leaf.cpp  (+2 more)
1000 -- 9999/: 1002. Find Common Characters.cpp  1038. Binary Search Tree to Greater Sum Tree.cpp  1051. Height Checker.cpp  1052. Grumpy Bookstore Owner.cpp  1110. Delete Nodes And Return Forest.cpp  1122. Relative Sort Array.cpp  1190. Reverse Substrings Between Each Pair of Parentheses.cpp  1208. Get Equal Substrings Within Budget.cpp  1219. Path with Maximum Gold.cpp  1248. Count Number of Nice Subarrays.cpp  1255. Maximum Score Words Formed by Letters.cpp  1289. Minimum Falling Path Sum II.cpp  1325. Delete Leaves With a Given Value.cpp  1334. Find the City With the Smallest Number of Neighbors at a Threshold Distance.cpp  1380. Lucky Numbers in a Matrix.cpp  1382. Balance a Binary Search Tree.cpp  1404. Number of Steps to Reduce a Number in Binary Representation to One.cpp  1438. Longest Continuous Subarray With Absolute Diff Less Than or Equal to Limit.cpp  1442. Count Triplets That Can Form Two Arrays of Equal XOR.cpp  1482. Minimum Number of Days to Make m Bouquets.cpp  1509. Minimum Difference Between Largest and Smallest Value in Three Moves.cpp  1518. Water Bottles.cpp  1530. Number of Good Leaf Nodes Pairs.cpp  1550. Three Consecutive Odds.cpp  1552. Magnetic Force Between Two Balls.cpp  1579. Remove Max Number of Edges to Keep Graph Fully Traversable.cpp  1598. Crawler Log Folder.cpp  1605. Find Valid Matrix Given Row and Column Sums.cpp  1609. Even Odd Tree.cpp  1614. Maximum Nesting Depth of the Parentheses.cpp  1636. Sort Array by Increasing Frequency.cpp  1642. Furthest Building You Can Reach.cpp  1701. Average Waiting Time.cpp  1717. Maximum Score From Removing Substrings.cpp  1791. Find Center of Star Graph.cpp  1823. Find the Winner of the Circular Game.cpp  1863. Sum of All Subset XOR Totals.cpp  1915. Number of Wonderful Substrings.cpp  2037. Minimum Number of Moves to Seat Everyone.cpp  2058. Find the Minimum and Maximum Number of Nodes Between Critical Points.cpp  (+24 more)
other/: DisjointSet.cpp  functions.cpp  main.cpp
