cmake_minimum_required(VERSION 3.16)
project(LeetCode_Solutions)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp)
add_executable(DisjointSet DisjointSet.cpp)
add_executable(functions functions.cpp)
add_executable(206_Reverse_Linked_List "206. Reverse Linked List.cpp")
add_executable(2130_Maximum_Twin_Sum_of_a_Linked_List "2130. Maximum Twin Sum of a Linked List.cpp")
add_executable(2095_Delete_the_Middle_Node_of_a_Linked_List "2095. Delete the Middle Node of a Linked List.cpp")
add_executable(876_Middle_of_the_Linked_List "876. Middle of the Linked List.cpp")
add_executable(202_Happy_Number "202. Happy Number.cpp")
add_executable(142_Linked_List_Cycle_II "142. Linked List Cycle II.cpp")
add_executable(141_Linked_List_Cycle "141. Linked List Cycle.cpp")
add_executable(1750_Minimum_Length_of_String_After_Deleting_Similar_Ends "1750. Minimum Length of String After Deleting Similar Ends.cpp")
add_executable(409_Longest_Palindrome "409. Longest Palindrome.cpp")
add_executable(3005_Count_Elements_With_Maximum_Frequency "3005. Count Elements With Maximum Frequency.cpp")
add_executable(948_Bag_of_Tokens "948. Bag of Tokens.cpp")
add_executable(19_Remove_Nth_Node_From_End_of_List "19. Remove Nth Node From End of List.cpp")
add_executable(15_3Sum "15. 3Sum")
add_executable(2798_Number_of_Employees_Who_Met_the_Target "2798. Number of Employees Who Met the Target")
add_executable(100_Same_Tree "100. Same Tree")
add_executable(2864_Maximum_Odd_Binary_Number "2864. Maximum Odd Binary Number")
add_executable(1609_Even_Odd_Tree "1609. Even Odd Tree")
add_executable(513_Find_Bottom_Left_Tree_Value "513. Find Bottom Left Tree Value")
add_executable(2092_Find_All_People_With_Secret "2092. Find All People With Secret")
add_executable(787_Cheapest_Flights_Within_K_Stops "787. Cheapest Flights Within K Stops")
add_executable(2709_Greatest_Common_Divisor_Traversal "2709. Greatest Common Divisor Traversal")
add_executable(997_Find_the_Town_Judge "997. Find the Town Judge")
add_executable(201_Bitwise_AND_of_Numbers_Range "201. Bitwise AND of Numbers Range")
add_executable(5_Longest_Palindromic_Substring "5. Longest Palindromic Substring")
add_executable(268_Missing_Number "268. Missing Number")
add_executable(3_Longest_Substring_Without_Repeating_Characters "3. Longest Substring Without Repeating Characters")
add_executable(2402_Meeting_Rooms_III "2402. Meeting Rooms III")
add_executable(231_Power_of_Two "231. Power of Two")
add_executable(1642_Furthest_Building_You_Can_Reach "1642. Furthest Building You Can Reach")
add_executable(1481_Least_Number_of_Unique_Integers_after_K_Removals "1481. Least Number of Unique Integers after K Removals")
add_executable(169_Majority_Element "169. Majority Element")
add_executable(647_Palindromic_Substrings "647. Palindromic Substrings")
add_executable(2_Add_Two_Numbers "2. Add Two Numbers")
add_executable(4_Median_of_Two_Sorted_Arrays "4. Median of Two Sorted Arrays")
add_executable(1_Two_Sum "1. Two Sum")
add_executable(172_Factorial_Trailing_Zeroes "172. Factorial Trailing Zeroes")
add_executable(9_Palindrome_Number "9. Palindrome Number")
add_executable(2149_Rearrange_Array_Elements_by_Sign "2149. Rearrange Array Elements by Sign")
add_executable(2108_Find_First_Palindromic_String_in_the_Array "2108. Find First Palindromic String in the Array")
add_executable(2540_Minimum_Common_Value "2540. Minimum Common Value")
add_executable(349_Intersection_of_Two_Arrays "349. Intersection of Two Arrays")